globus-proxy-utils (6.11-1+gt6.@distro@) @distro@; urgency=low

  * Remove unused label
  * Check for c99 compiler flags

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 19:26:21 -0400

globus-proxy-utils (6.10-1+gt6.@distro@) @distro@; urgency=low

  * GT-607: improve grid-cert-diagnostic command to retrieve endpoint cert

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 08:54:10 -0400

globus-proxy-utils (6.9-2+gt6.@distro@) @distro@; urgency=low

  * Add build dependency on OpenSSL

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:47:30 -0500

globus-proxy-utils (6.9-1+gt6.@distro@) @distro@; urgency=low

  * Remove unused Doxygen headers
  * Quiet some autoconf/automake warnings
  * Convert manpages to asciidoc source

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 13:52:25 -0400

globus-proxy-utils (6.8-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-proxy-utils (6.7-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-proxy-utils (6.7-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-proxy-utils (6.7-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:44 -0400

globus-proxy-utils (6.6-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-proxy-utils (6.5-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-proxy-utils (6.5-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup
