@@ -1,3 +1,9 @@
+globus-proxy-utils (6.12-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add explicit name comparison result and mode select option
+
+ -- Globus Toolkit <support@globus.org>  Tue, 28 Jul 2015 10:57:21 -0400
+
 globus-proxy-utils (6.11-1+gt6.@distro@) @distro@; urgency=low
 
   * Remove unused label
